2007-06-27  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/SyncManager.cs: Added in descriptive status messages (which
	  we'll need to change later) for the sync dialog.  Also added code
	  to add status messages about files that come from the client.
	* Tomboy/Note.cs: Changed the default revision on a new note to be -1. 
	  -1 signifies that a note has never been synchronized.

2007-06-27  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/FileSystemSyncServer.cs: Extrated AdjustPermissions method. 
	  Setting permissions on parent directory when necessary.

2007-06-27  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/FileSystemSyncServer.cs: Removing old code that was commented
	  out.

2007-06-26  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/SyncManager.cs: Added Revision to the lock file though I'm not
	  sure it's entirely necessary.
	* Tomboy/FileSystemSyncServer.cs: Added a bunch of code to sync using
	  the new method that uses manifest.xml files in combination with
	  clients only writing to a revision directory.

2007-06-26  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/SyncManager.cs: SyncLockInfo class added.
	* Tomboy/FileSystemSyncServer.cs: Added code to deal with sync lock
	  files to expire them and guarantee that only one client gets in at
	  a time.
	* Tomboy/Preferences.cs: Added a SYNC_GUID so that clients can identify
	  themselves in the lock file.  By default it'll just use a
	  System.Guid, but you could go change the key in GConf and it'll
	  work.

2007-06-25  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy.mdp: Added SyncManager.cs, SyncDialog.cs,
	  FileSystemSyncServer.cs, TomboySyncClient.cs
	* Tomboy/PreferencesDialog.cs, Tomboy/SyncDialog.cs,
	  Tomboy/SyncManager.cs, Tomboy/Preferences.cs, Tomboy/Makefile.am,
	  Tomboy/TomboySyncClient.cs: Initial sync code from Sandy Armstrong.
	* Tomboy/FileSystemSyncServer.cs: Initial sync code from Sandy
	  Armstrong.  Deal with lock file expiration also.