@@ -12,6 +12,7 @@ namespace Tomboy
 		static bool tray_icon_showing = false;
 		static bool is_panel_applet = false;
 		static PreferencesDialog prefs_dlg;
+		static SyncDialog sync_dlg;
 #if ENABLE_DBUS
 		static RemoteControl remote_control;
 #endif
@@ -170,6 +171,7 @@ namespace Tomboy
 			am ["ShowAboutAction"].Activated += OnShowAboutAction;
 			am ["TrayNewNoteAction"].Activated += OnNewNoteAction;
 			am ["ShowSearchAllNotesAction"].Activated += OpenSearchAll;
+			am ["NoteSynchronizationAction"].Activated += OpenNoteSyncWindow;
 		}
 		
 		static void OnNewNoteAction (object sender, EventArgs args)
@@ -266,6 +268,21 @@ namespace Tomboy
 			NoteRecentChanges.GetInstance (manager).Present ();
 		}
 		
+		static void OpenNoteSyncWindow (object sender, EventArgs args)
+		{
+			if (sync_dlg == null) {
+				sync_dlg = new SyncDialog ();
+				sync_dlg.Response += OnSyncDialogResponse;
+			}
+			sync_dlg.Present ();
+		}
+		
+		static void OnSyncDialogResponse (object sender, Gtk.ResponseArgs args)
+		{
+			((Gtk.Widget) sender).Destroy ();
+			sync_dlg = null;
+		}
+		
 		public static NoteManager DefaultNoteManager
 		{
 			get { return manager; }
@@ -284,6 +301,11 @@ namespace Tomboy
 		public static TomboyTray Tray
 		{
 			get { return tray_icon.TomboyTray; }
+		}
+		
+		public static SyncDialog SyncDialog
+		{
+			get { return sync_dlg; }
 		}
 	}
 
